posicion adsoluta imagen

--- a/src/Style/Style.css
+++ b/src/Style/Style.css
@@ -22,3 +22,10 @@
   background: #49b9e6;
   border: none;
 }
+
+.imagen {
+  border-radius: 20%;
+  position: absolute;
+  top: 90px;
+  left: 350px;
+}
